--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "request": "~2.21.0",
     "mongodb": "~1.3.6",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "commander": "~1.1.1"
   }
 }
